# pytorch-playground

./: .gitignore  README.md  pyproject.toml
notebooks/: 01 - pytorch-basic.ipynb  01 - start torch.ipynb  02 - data_explore.ipynb  03 - building_nn.ipynb  04 - train_model.ipynb  05 - convnet_neural_network.ipynb  graph.py
